<resources>

    <!-- 습관 리스트 아이템 -->
    <string name="habit_sample_title">아침 챙겨먹기</string>

    <!-- 기록 화면 -->
    <string name="this_month_history_title">%s월 기록</string>
    <string name="this_month_clap_title">%s월 박수</string>
    <string name="this_month_achieve_days_title">%s월 습관 실천일</string>
    <string name="this_month_most_achieve_habit_guide">이번달,\n가장 많이 실천한 습관</string>
    <string name="this_month_most_achieve_habit_title">점심먹은 직후\n종합 비타민 호다닥</string>
    <string name="ongoing_habit">진행중인 습관</string>
    <string name="history_tooltip_guide">히스토리에 저장되지 않고 삭제된 습관은\n나의 기록에서 확인할 수 없어요. 🥲</string>
    <string name="no_habit_guide">아직 습관이 없어요.\n새로운 습관을 만들어볼까요?</string>
    <string name="create_habit">습관 만들기</string>
    <string name="no_achievement_habit_guide">아직 실행한\n습관이없어요</string>

    <!-- emoji -->
    <string name="clap">👏🏻</string>
    <string name="watch">🕖</string>
    <string name="medicine">💊</string>

    <!-- 상세기록 페이지 -->
    <string name="detail_clap">박수</string>
    <string name="detail_habit_execute_day">습관 실천일</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="month_clap_count">%d월의 박수: %d개</string>
    <string name="month_achievement_day_count">%d월의 습관 실천일: %d일</string>
</resources>
