<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HistoryFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <ImageView
            android:id="@+id/iv_prev_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_left_arrow_default"
            app:layout_constraintTop_toTopOf="@+id/tv_this_month"
            app:layout_constraintBottom_toBottomOf="@+id/tv_this_month"
            app:layout_constraintEnd_toStartOf="@+id/tv_this_month"/>

        <TextView
            android:id="@+id/tv_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/Typography.H1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/this_month_history_title"/>

        <ImageView
            android:id="@+id/iv_next_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_right_arrow_disable"
            app:layout_constraintTop_toTopOf="@+id/tv_this_month"
            app:layout_constraintBottom_toBottomOf="@+id/tv_this_month"
            app:layout_constraintStart_toEndOf="@+id/tv_this_month"/>

        <ImageView
            android:id="@+id/iv_tooltip"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_tooltip"
            app:layout_constraintTop_toTopOf="@+id/iv_next_month"
            app:layout_constraintBottom_toBottomOf="@+id/iv_next_month"
            app:layout_constraintEnd_toEndOf="@id/gl_end"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="12dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_tooltip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Typography.Paragraph3.13dp"
                android:text="@string/history_tooltip_guide"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="16dp"/>
        </androidx.cardview.widget.CardView>

        <Space
            android:id="@+id/space_bottom_of_toolbar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_this_month"/>

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="cl_this_month_clap, cl_this_month_achieve_days, cl_most_achieve, tv_ongoing_habit, rv_habit" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_this_month_clap"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_rect_gray700_r10"
            app:layout_constraintEnd_toStartOf="@id/gl_middle"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/space_bottom_of_toolbar">

            <TextView
                android:id="@+id/tv_this_month_clap_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:textAppearance="@style/Typography.Body3"
                android:textColor="@color/gray_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/this_month_clap_title"/>

            <TextView
                android:id="@+id/tv_clap_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clap"
                android:textAppearance="@style/Typography.H1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_this_month_clap"
                app:layout_constraintEnd_toStartOf="@+id/tv_this_month_clap"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_this_month_clap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/Typography.H1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_clap_emoji"
                tools:text="4"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_this_month_achieve_days"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rect_gray700_r10"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintEnd_toStartOf="@id/gl_middle"
            app:layout_constraintTop_toBottomOf="@+id/cl_this_month_clap">

            <TextView
                android:id="@+id/tv_this_month_achieve_days_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:textAppearance="@style/Typography.Body3"
                android:textColor="@color/gray_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/this_month_achieve_days_title"/>

            <TextView
                android:id="@+id/tv_watch_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch"
                android:textAppearance="@style/Typography.H1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_this_month_achieve_days"
                app:layout_constraintEnd_toStartOf="@+id/tv_this_month_achieve_days"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_this_month_achieve_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/Typography.H1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_watch_emoji"
                tools:text="26" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:id="@+id/gl_middle"
            android:layout_width="12dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_most_achieve"
            android:layout_width="0dp"
            android:layout_height="212dp"
            android:background="@drawable/bg_rect_green_sub_color_r10"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_middle"
            app:layout_constraintTop_toTopOf="@+id/cl_this_month_clap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:text="@string/this_month_most_achieve_habit_guide"
                android:textAppearance="@style/Typography.Paragraph3.13dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine"
                android:textAppearance="@style/Typography.Body1"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:textAppearance="@style/Typography.Body2.Bold"
                android:textColor="#FDFDFD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/this_month_most_achieve_habit_title"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_ongoing_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/ongoing_habit"
            android:textAppearance="@style/Typography.Body2.SemiBold"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/cl_this_month_achieve_days" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_habit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ongoing_habit"
            tools:listitem="@layout/item_habit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
